# ML_AI

./: .env.example  .gitignore  CONTEXT.md  README.md  RULES.md  alembic.ini  debug_stderr.txt  prompt.md  pyproject.toml  run_app.py  test.db
alembic/: env.py
alembic/versions/: 001_initial.py
openspec/changes/ML_AI/: PRD_ML.md  SPEC_ML.md  apply-progress.md  design.md  tasks.md  tasks_v3.md
openspec/changes/archive/2026-05-14-ML_AI/: design_v2.md  tasks_v2.md  verify-report.md
src/monitor_licitaciones/: config.py  main.py
src/monitor_licitaciones/cli/: init_db.py  migrate.py  seed.py
src/monitor_licitaciones/domain/pipeline/: gestor_pipeline.py
src/monitor_licitaciones/domain/scoring/: gestor_reglas.py  motor_scoring.py  tipos.py
src/monitor_licitaciones/infrastructure/api/: cliente_mp.py  schemas_mp.py
src/monitor_licitaciones/infrastructure/database/: connection.py  models.py  repositorio_configuracion.py  repositorio_licitaciones.py  repositorio_reglas.py
src/monitor_licitaciones/ui/: main_window.py
src/monitor_licitaciones/ui/dialogs/: config_exportacion.py  config_extraccion.py  (+4 more)
src/monitor_licitaciones/workers/: __init__.py  exportacion_worker.py  extraccion_worker.py  piloto_worker.py  scoring_worker.py
tests/: conftest.py
tests/test_domain/: test_gestor_pipeline.py  test_gestor_reglas.py  test_motor_scoring.py
tests/test_e2e/: test_flujo_completo.py  test_validacion_pydantic.py
tests/test_infrastructure/: test_cliente_mp.py  test_config.py  test_repositorio_licitaciones.py  test_repositorio_reglas.py
tests/test_ui/: test_dialogs.py  test_widgets.py
tests/test_workers/: test_extraccion_worker.py  test_piloto_worker.py  test_scoring_worker.py
(+3 files in other folders)
