[project]
name = "monitor-licitaciones"
version = "1.0.0"
description = "Monitor de Licitaciones - Mercado Público Chile"
requires-python = ">=3.13,<3.15"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python          = ">=3.13,<3.15"
PySide6         = "^6.5.0"
SQLAlchemy      = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic         = "^1.12.0"
python-dotenv   = "^1.0.0"
requests        = "^2.31.0"
openpyxl        = "^3.1.0"
pandas          = "^2.0.0"
loguru          = "^0.7.0"
pydantic        = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest          = "^9.0.0"
pytest-qt       = "^4.2.0"
pytest-cov      = "^4.1.0"
responses       = "^0.25.0"
ruff            = "^0.4.0"

[tool.poetry.scripts]
gui      = "monitor_licitaciones.main:main"
init-db  = "monitor_licitaciones.cli.init_db:main"
migrate  = "monitor_licitaciones.cli.migrate:main"
seed     = "monitor_licitaciones.cli.seed:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["src"]
addopts    = "--cov=src/monitor_licitaciones --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = [
    "*/cli/*",
    "*/main.py",
    "*/ui/*",
    "*/infrastructure/database/connection.py",
    "*/infrastructure/api/cliente_mp.py",
    "*/infrastructure/api/schemas_mp.py",
    "*/workers/exportacion_worker.py",
    "*/infrastructure/database/repositorio_configuracion.py",
]

[tool.coverage.report]
fail_under = 80

[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
